<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.products</groupId>
	<artifactId>demoinventory</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>demoinventory</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version>
		<maven-source-plugin>3.0.1</maven-source-plugin>
		<jacoco.plugin.version>0.7.9</jacoco.plugin.version>
		<jacoco.lineRate>0.85</jacoco.lineRate>
		<jacoco.methodRate>0.85</jacoco.methodRate>
		<jacoco.classRate>0.85</jacoco.classRate>
		<jacoco.branchRate>0.85</jacoco.branchRate>
		<jacoco.halt>true</jacoco.halt>
		<pitest-maven.version>1.1.10</pitest-maven.version>
		<maven-surefire-plugin.version>2.18</maven-surefire-plugin.version>
		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
		<sonar-maven-plugin.version>3.2</sonar-maven-plugin.version>
	</properties>
	
	<distributionManagement>
	 	 <repository>
	 	 	<id>maven-nexus</id>
	 	 	<name>maven-nexus</name>
	 	 	<url>http://localhost:8081/repository/maven-releases</url>
	 	 </repository>
		 <snapshotRepository>
		 	<uniqueVersion>false</uniqueVersion>
		    <id>maven-nexus</id>
		    <name>maven-nexus</name>
		    <url>http://localhost:8081/repository/maven-snapshots</url>
		 </snapshotRepository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.22</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>2.3.5.RELEASE</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
		<dependency>
		    <groupId>org.codehaus.mojo</groupId>
		    <artifactId>sonar-maven-plugin</artifactId>
		    <version>3.2</version>
		    <type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/pl.pojo/pojo-tester -->
		<dependency>
			<groupId>pl.pojo</groupId>
			<artifactId>pojo-tester</artifactId>
			<version>0.7.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>
		<!-- Karate Dependency -->
		<dependency>
			<groupId>com.intuit.karate</groupId>
			<artifactId>karate-apache</artifactId>
			<version>0.9.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.intuit.karate</groupId>
			<artifactId>karate-junit4</artifactId>
			<version>0.9.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>4.5.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
			<testResource>
				<directory>src/test/resource</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<verbose>true</verbose>
					<fork>true</fork>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerVersion>${java.version}</compilerVersion>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<!-- This profile is for Jacoco -->
		<profile>
			<id>runJacoco</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.plugin.version}</version>
						<configuration>
							<excludes>
								<exclude>com/products/DemoinventoryApplication.class</exclude>
								<exclude>com/products/constants/DemoInventoryConstants.class</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
							<execution>
								<id>checkid</id>
								<goals>
									<goal>check</goal>
								</goals>
								<configuration>
									<haltOnFailure>${jacoco.halt}</haltOnFailure>
									<rules>
										<rule>
											<element>BUNDLE</element>
											<limits>
												<limit>
													<counter>CLASS</counter>
													<value>COVEREDRATIO</value>
													<minimum>${jacoco.classRate}</minimum>
												</limit>
												<limit>
													<counter>METHOD</counter>
													<value>COVEREDRATIO</value>
													<minimum>${jacoco.methodRate}</minimum>
												</limit>
												<limit>
													<counter>LINE</counter>
													<value>COVEREDRATIO</value>
													<minimum>${jacoco.lineRate}</minimum>
												</limit>
												<limit>
													<counter>BRANCH</counter>
													<value>COVEREDRATIO</value>
													<minimum>${jacoco.branchRate}</minimum>
												</limit>
											</limits>
										</rule>
									</rules>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<!-- This profile is for PIT -->
		<profile>
			<id>runPIT</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<version>${pitest-maven.version}</version>
						<configuration>
							<targetClasses>
								<param>com.products.*</param>
							</targetClasses>
							<targetTests>
								<param>com.products.*</param>
							</targetTests>
							<excludedClasses>
								<param>com.products.DemoinventoryApplication*</param>
							</excludedClasses>
							<avoidCallsTo>
								<!-- Default avoided package -->
								<avoidCallsTo>java.util.logging</avoidCallsTo>
								<avoidCallsTo>org.apache.log4j</avoidCallsTo>
								<avoidCallsTo>org.slf4j</avoidCallsTo>
								<avoidCallsTo>org.apache.commons.logging</avoidCallsTo>
							</avoidCallsTo>
							<failWhenNoMutations>false</failWhenNoMutations>
							<timestampedReports>false</timestampedReports>
							<outputFormats>
								<outputFormat>HTML</outputFormat>
								<outputFormat>XML</outputFormat>
							</outputFormats>
							<threads>8</threads>
							<timeoutFactor>100</timeoutFactor>
							<timeoutConstant>60000</timeoutConstant>
							<jvmArgs>
								<value>-XX:MaxPermSize=1g</value>
								<value>-Demma.rt.control=false</value>
							</jvmArgs>
							<mutationThreshold>80</mutationThreshold>
						</configuration>
						<executions>
							<execution>
								<id>mutation-test</id>
								<phase>test</phase>
								<goals>
									<goal>mutationCoverage</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<!-- This profile is for Sonar -->
		<profile>
			<id>runSonar</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>${sonar-maven-plugin.version}</version>
						<configuration>
							<target>
								<mkdir dir="target/sonar-reports" />
							</target>
							<excludedClasses>
								<param>com.products.DemoinventoryApplication.class</param>
							</excludedClasses>
						</configuration>
						<executions>
							<execution>
								<id>sonar</id>
								<phase>verify</phase>
								<goals>
									<goal>sonar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<!-- This profile is for BDD -->
		<profile>
			<id>runBDD</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${maven-surefire-plugin.version}</version>
						<configuration>
							<argLine>-Dfile.encoding=UTF-8</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<!-- <profile>
			<id>sonar</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<sonar.host.url>http://localhost:9000</sonar.host.url>
			</properties>
		</profile> -->
	</profiles>

</project>
